--- a/app/src/main/res/layout/fragment_list_movie.xml
+++ b/app/src/main/res/layout/fragment_list_movie.xml
@@ -4,4 +4,15 @@
     android:layout_height="match_parent"
     tools:context="com.framgia.habt.moviedb.ui.fragment.ListMovieFragment">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/fragment_list_movie_srl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_list_movie_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
