--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="toolbar_icon_width">30dp</dimen>
     <dimen name="toolbar_icon_height">30dp</dimen>
+    <dimen name="list_view_item_image_width">66dp</dimen>
+    <dimen name="list_view_item_image_height">100dp</dimen>
+    <dimen name="list_view_item_title_text_size">20sp</dimen>
+    <dimen name="list_view_item_padding">5dp</dimen>
 </resources>
