--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,9 @@
     <dimen name="list_view_item_image_height">100dp</dimen>
     <dimen name="list_view_item_title_text_size">20sp</dimen>
     <dimen name="list_view_item_padding">5dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="layout_item_margin">5dp</dimen>
+    <dimen name="fragment_info_poster_width">120dp</dimen>
+    <dimen name="fragment_info_poster_height">180dp</dimen>
+    <dimen name="layout_item_padding">5dp</dimen>
 </resources>
