generic adapter and Cast

--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -2,15 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.framgia.habt.moviedb.ui.fragment.ListMovieFragment">
+    tools:context=".ui.fragment.RecyclerViewFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/fragment_list_movie_srl"
+        android:id="@+id/fragment_recycler_view_srl"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/fragment_list_movie_rv"
+            android:id="@+id/fragment_recycler_view_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
